tests/fixtures/invalid/unknown_type_ref.avsc
{
  "type": "record",
  "name": "Test",
  "fields": [
    {"name": "value", "type": "UnknownType"}
  ]
}
